WIP basic styling to center nav, route to index of links

--- a/app/views/home/url_crunch.html.erb
+++ b/app/views/home/url_crunch.html.erb
@@ -1,4 +1,4 @@
-<h1>Hello! Enter a URL to get it's shorter cousin for sharing.</h1>
+<h1 class="text-center">Hello! Enter a URL to get it's shorter cousin for sharing.</h1>
 <div class="row">
   <div class="col-sm-12 text-center">
     <%= form_for @url do |f| %>
