--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,9 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-    <div class="text-center">
-      stuff
-    </div>
-    <div class="text-center">
-      more stuff
-    </div>
+  <div class="container" id="main-nav">
+    <ul class="nav navbar-nav">
+      <li>
+        <%= link_to "All URLS" %>
+      </li>
+    </ul>
   </div>
 </nav>
