--- a/app/views/home/url_crunch.html.erb
+++ b/app/views/home/url_crunch.html.erb
@@ -1,9 +1,13 @@
-<h1 class="text-center">Hello! Enter a URL to get it's shorter cousin for sharing.</h1>
+<h3 class="text-center">Hello! Enter a URL to get it's shorter cousin for sharing.</h3>
+</br>
 <div class="row">
   <div class="col-sm-12 text-center">
-    <%= form_for @url do |f| %>
-      <%= f.label :orginal_url %>
-      <%= f.text_field :original_url %>
+    <%= form_for @url, url: url_crunch_path do |f| %>
+      <%= f.label :orginal_url, id: "url-crunch-input-label" %>
+      </br>
+      <%= f.url_field :original_url, id: "url-crunch-input" %>
+      </br>
+      <%= f.submit "Crunch It", class: "btn btn-warning", id: "url-crunch-submit"%>
     <% end %>
   </div>
 </div>
