--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,6 +4,9 @@
       <li>
         <%= link_to "All URLS", url_index_path %>
       </li>
+      <li>
+        <%= link_to "Cruncher", root_path %>
+      </li>
     </ul>
   </div>
 </nav>
