--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container" id="main-wrapper">
+  <div class="container">
     <div class="bumper" style="margin-top:50px;">
     </div>
     <%= render partial: "shared/navbar" %>
