--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container" id="main-nav">
     <ul class="nav navbar-nav">
       <li>
-        <%= link_to "All URLS", url_index_path %>
+        <%= link_to "Crunched URLS", url_index_path %>
       </li>
       <li>
         <%= link_to "Cruncher", root_path %>
