updated Readme, removed unused gem from Gemfile, changed text on root view

--- a/app/views/home/url_crunch.html.erb
+++ b/app/views/home/url_crunch.html.erb
@@ -1,5 +1,5 @@
 <div id="cruncher-wrapper">
-  <h3 class="text-center">Hello! Enter a URL to get it's shorter cousin for sharing.</h3>
+  <h3 class="text-center">Hello! Enter a URL to get it's ugly cousin for sharing.</h3>
   </br>
   <div class="row">
     <div class="col-sm-12 text-center">
